# 7zlite

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: 7zlite.h  compat.h
src/: archive.c  cli.c  compress.c  decompress.c  filelist.c  link.c  main.c
src/platform/: posix.c  windows.c
